--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -7,11 +7,11 @@ description: The <OrganizationSwitcher /> component is used to enable the abilit
 
 <Images alt="Organization Switcher Example" width={992} height={568} src="/docs/images/ui-components/component-org_switcher.svg" />
 
-The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
+The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable the ability to switch between available organizations the user may be part of in your application.
 
 ## `mountOrganizationSwitcher()`
 
-Render the `<OrganizationSwitcher />` component to an HTML `<div>` element.
+Render the [`<OrganizationSwitcher />`][orgswitcher-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -70,12 +70,12 @@ function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwi
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationSwitcher />` component |
-| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the `<OrganizationSwitcher />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
+| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
 
 ## `unmountOrganizationSwitcher()`
 
-Unmount and run cleanup on an existing `<OrganizationSwitcher />` component instance.
+Unmount and run cleanup on an existing [`<OrganizationSwitcher />`][orgswitcher-ref] component instance.
 
 ### Usage
 
@@ -134,7 +134,7 @@ function unmountOrganizationSwitcher(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationSwitcher />` component instance |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationSwitcher />`][orgswitcher-ref] component instance |
 
 ## `OrganizationSwitcherProps`
 
@@ -143,12 +143,18 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `appearance` | `object` | Control the look and feel of the component. |
-| `createOrganizationUrl` | `string` | Full URL or path where the `<CreateOrganization />`component is mounted. |
-| `organizationProfileUrl` | `string` | Full URL or path where the `<OrganizationProfile />` component is mounted. |
-| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Create organization** button will cause the `<CreateOrganization />` component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where `<CreateOrganization />` is mounted as a page. <br />Defaults to: `'modal'` |
-| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage organization** button will cause the `<OrganizationProfile />` component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where `<OrganizationProfile />` is mounted as a page. <br />Defaults to: `'modal'` |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `createOrganizationUrl` | `string` | Full URL or path where the [`<CreateOrganization />`][createorg-ref]component is mounted. |
+| `organizationProfileUrl` | `string` | Full URL or path where the [`<OrganizationProfile />`][orgprofile-ref] component is mounted. |
+| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Create organization** button will cause the [`<CreateOrganization />`][createorg-ref] component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where [`<CreateOrganization />`][createorg-ref] is mounted as a page. <br />Defaults to: `'modal'` |
+| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage organization** button will cause the [`<OrganizationProfile />`][orgprofile-ref] component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where [`<OrganizationProfile />`][orgprofile-ref] is mounted as a page. <br />Defaults to: `'modal'` |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after the user leaves the currently active organization. |
 | `afterSwitchOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
-| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationSwitcher />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
-| `defaultOpen` | `boolean` | Controls the default state of the `<OrganizationSwitcher />` component. |
+| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether [`<OrganizationSwitcher />`][orgswitcher-ref] will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
+| `defaultOpen` | `boolean` | Controls the default state of the [`<OrganizationSwitcher />`][orgswitcher-ref] component. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
+[orgswitcher-ref]: /docs/components/organization/organization-switcher
+[createorg-ref]: /docs/components/organization/create-organization
+[orgprofile-ref]: /docs/components/organization/organization-profile
