--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -16,22 +16,22 @@ function setSession(
 ): Promise<void>;
 ```
 
-Set the current session on this client to the provided session. The provided session can be either a complete <a href="/docs/references/javascript/session">Session</a> object or simply its unique identifier.
+Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
 
 Passing null as the session will result in the current session to be removed from the client.
 
 If an active session already exists, it will be replaced with the new one. The change happens in three steps:
 
-1. The current <a href="/docs/references/javascript/session">`Session`</a> object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
+1. The current [`Session`][session-ref] object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
 2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current <a href="/docs/references/javascript/session">`Session`</a> is set to the passed `session`. This causes the control components to render their children again.
+3. The current [`Session`][session-ref] is set to the passed `session`. This causes the control components to render their children again.
 
 ### Props
 
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
+| `session` | [`Session`][session-ref] \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
 | `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to `undefined`, before finally being set to the passed session. Usually used for navigation. |
 
 ### Returns
@@ -58,7 +58,7 @@ An experimental method used to set the active session and/or organization.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | `Session \| string \| null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `session` | [`Session`][session-ref] \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
 | `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
 | `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
@@ -67,3 +67,5 @@ An experimental method used to set the active session and/or organization.
 | Type | Description |
 | --- | --- |
 | `Promise<void>` | The `Promise` will resolve after the passed `session` or `organization` is set. |
+
+[session-ref]: /docs/references/javascript/session
