--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -7,11 +7,11 @@ description: The <UserButton /> component is used to render the familiar user bu
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
 
-The `<UserButton />` component is used to render the familiar user button UI popularized by Google.
+The [`<UserButton />`][userbutton-ref] component is used to render the familiar user button UI popularized by Google.
 
 ## `mountUserButton()`
 
-Render the `<UserButton />` component to an HTML `<div>` element.
+Render the [`<UserButton />`][userbutton-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -70,12 +70,12 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserButton />` component |
-| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the `<UserButton />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserButton />`][userbutton-ref] component |
+| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the [`<UserButton />`][userbutton-ref] component |
 
 ## `unmountUserButton()`
 
-Unmount and run cleanup on an existing `<UserButton />` component instance.
+Unmount and run cleanup on an existing [`<UserButton />`][userbutton-ref] component instance.
 
 ### Usage
 
@@ -134,7 +134,7 @@ function unmountUserButton(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserButton />` component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserButton />`][userbutton-ref] component instance. |
 
 ## `UserButtonProps`
 
@@ -142,13 +142,17 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | `object` | Controls the overall look and feel. |
-| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
 | `signInUrl` | `string` | The full URL or path to navigate to when the **Add another account** button is clicked. |
-| `userProfileMode` | `"modal" \| "navigation"` | Controls whether clicking the **Manage your account** button will cause the `<UserProfile />` component to open as a modal, or if the browser will navigate to the `userProfileUrl` where `<UserProfile />` is mounted as a page. |
+| `userProfileMode` | `"modal" \| "navigation"` | Controls whether clicking the **Manage your account** button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
 | `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
 | `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
 | `afterSwitchSessionUrl` | `string` | Full URL or path to navigate to after a successful account change (multi-session apps). |
 | `defaultOpen` | `string` | Controls whether the `<UserButton/>` should open by default during the first render. |
-| `userProfileProps` | `object` | Specify options for the underlying `<UserProfile />` component.<br />e.g. `additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}` |
+| `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component.<br />e.g. `additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}` |
+
+[userbutton-ref]: /docs/components/user/user-button
+[userprofile-ref]: /docs/components/user/user-profile
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
