--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -7,11 +7,11 @@ description: The `<CreateOrganization />` component is used to render an organiz
 
 <Images alt="Create Organization Example" width={992} height={568} src="/docs/images/ui-components/component-org_create.svg" />
 
-The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
+The [`<CreateOrganization />`][createorg-ref] component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 
 ## `mountCreateOrganization()`
 
-Render the `<CreateOrganization />` component to an HTML `<div>` element.
+Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -70,12 +70,12 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<CreateOrganization />` component |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<CreateOrganization />`][createorg-ref] component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
 
 ## `unmountCreateOrganization`
 
-Unmount and run cleanup on an existing `<CreateOrganization />` component instance.
+Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref] component instance.
 
 ### Usage
 
@@ -134,11 +134,11 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<CreateOrganization />` component instance |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<CreateOrganization />`][createorg-ref] component instance |
 
 ## `openCreateOrganization`
 
-Opens the `<CreateOrganization />` component as an overlay at the root of your HTML `body` element.
+Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -186,7 +186,7 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
 
 ## `closeCreateOrganization`
 
@@ -243,6 +243,10 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org.<br />This prop is ignored in hash and virtual based routing. |
-| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
-| `appearance` | `object` | Control the look and feel of the component. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
+[createorg-ref]: /docs/components/organization/create-organization]
