--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -7,11 +7,11 @@ description: The <OrganizationProfile /> component is used to render a beautiful
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/docs/images/ui-components/component-org_profile.svg" />
 
-The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+The [`<OrganizationProfile />`][orgprofile-ref] component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
 ## `mountOrganizationProfile()`
 
-Render the `<OrganizationProfile />` component to an HTML `<div>` element.
+Render the [`<OrganizationProfile />`][orgprofile-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -70,12 +70,12 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationProfile />` component |
-| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationProfile />`][orgprofile-ref] component |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the [`<OrganizationProfile />`][orgprofile-ref] component |
 
 ## `unmountOrganizationProfile()`
 
-Unmount and run cleanup on an existing `<OrganizationProfile />` component instance.
+Unmount and run cleanup on an existing [`<OrganizationProfile />`][orgprofile-ref] component instance.
 
 ### Usage
 
@@ -134,11 +134,11 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationProfile />` component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationProfile />`][orgprofile-ref] component instance. |
 
 ## `openOrganizationProfile()`
 
-Opens the `<OrganizationProfile />` component as an overlay at the root of your HTML `body` element.
+Opens the [`<OrganizationProfile />`][orgprofile-ref] component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -186,7 +186,7 @@ function openOrganizationProfile(props?: OrganizationProfileProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the [`<OrganizationProfile />`][orgprofile-ref] component |
 
 ## `closeOrganizationProfile()`
 
@@ -243,6 +243,10 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /org-profile.<br />This prop is ignored in hash and virtual based routing. |
-| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash based routing.</li> <li>`path`: Path based routing.</li> <li>`virtual`: Virtual based routing.</li></ul> |
-| `appearance` | `object` | Control the look and feel of the component. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+
+[orgprofile-ref]: /docs/components/organization/organization-profile
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
