--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -7,11 +7,11 @@ description: The <UserProfile /> component is used to render a beautiful, full-f
 
 <Images width={976} height={762} src="/docs/images/ui-components/component-user_profile.svg" alt="User Profile example" />
 
-The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
+The [`<UserProfile />`][userprofile-ref] component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 
 ## `mountUserProfile()`
 
-Render the `<UserProfile />` component to an HTML `<div>` element.
+Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -70,12 +70,12 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserProfile />` component |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserProfile />`][userprofile-ref] component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
 
 ## `unmountUserProfile()`
 
-Unmount and run cleanup on an existing `<UserProfile />` component instance.
+Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] component instance.
 
 ### Usage
 
@@ -134,11 +134,11 @@ function unmountUserProfile(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserProfile />` component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserProfile />`][userprofile-ref] component instance. |
 
 ## `openUserProfile()`
 
-Opens the `<UserProfile />` component as an overlay at the root of your HTML `body` element.
+Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -186,7 +186,7 @@ function openUserProfile(props?: UserProfileProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
 
 ## `closeUserProfile()`
 
@@ -242,7 +242,11 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | `object` | Controls the overall look and feel. |
-| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li></ul> |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
 | `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved.<br/>e.g. `{google: ['foo', 'bar'], github: ['qux']}` |
+
+[userprofile-ref]: /docs/components/user/user-profile
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
