--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -23,7 +23,7 @@ To access authentication state from a satellite domain, users will be transparen
 Currently, multi-domain can be added to any Next.js or Remix application. For other React frameworks, multi-domain is still supported as long as you do not use server rendering or hydration.
 </Callout>
 
-To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.dev/). Once you create an instance via the dashboard, you will be prompted to choose a domain. This is your primary domain. For the purposes of this guide, the primary domain will be `primary.dev`.
+To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.dev/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. This is your primary domain. For the purposes of this guide, the primary domain will be `primary.dev`.
 
 When building your sign-in flow, you must configure it to run within your primary application, e.g. on /sign-in.
 
@@ -33,21 +33,20 @@ When building your sign-in flow, you must configure it to run within your primar
 
 ### Add your first satellite domain
 
-Go to the [Domains](https://dashboard.clerk.com/last-active?path=domains) tab in the Clerk dashboard and add a new satellite domain of your choice. Then, follow the instructions provided.
+Go to the [Domains](https://dashboard.clerk.com/last-active?path=domains) page in the Clerk dashboard and click on the 'Satellite' tab. Click on the 'Add satellite domain' button to add a new satellite domain of your choice. Then, follow the instructions provided.
 
 For the purposes of this guide, the satellite domain will be "satellite.dev".
 
-
 <Images
-src="/docs/images/advance/multi-domain/satellite-domain-add.png"
+src="/docs/images/advance/multi-domain/add-satellite-domain.webp"
 width={3024}
 height={1748}
-alt="Clerk Dashboard inside the satellites tab of the domain"
+alt="The 'Satellite' tab on the Domains page in the Clerk Dashboard."
 />
 
 ### Configure your satellite app with environment variables
 
-Now that you have created the satellite application, it's time to configure it as such. You can do so with the environment variables below or via properties (see the next step).
+You need to configure your satellite application as a satellite application. You can do so with the environment variables below or via properties (see the next step).
 
 <CodeBlockTabs options={["Next.js", "Remix"]}>
 ```env filename=".env.local"
@@ -164,7 +163,7 @@ Your satellite application should now be able to access the authentication state
 You can see it in action by: 
 1. Visiting the primary domain and signing in.
 2. Visiting the satellite domain.
-3. You now have an active session in the satellite domain, so you can see the `<UserProfile />` component and update your information.
+3. You now have an active session in the satellite domain, so you can see the [`<UserProfile />`](/docs/components/user/user-profile) component and update your information.
 
 You can repeat this process and create as many satellite applications as you need.
 
