--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -5,7 +5,7 @@ description: The useSessionList() hook returns an array of Session objects that 
 
 # `useSessionList()`
 
-The useSessionList() hook returns an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device.
+The `useSessionList()` hook returns an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device.
 
 ## Usage
 
