--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -5,7 +5,7 @@ description: The useSession() hook provides access to the the current user Sessi
 
 # `useSession()`
 
-The useSession() hook provides access to the current user's [`Session`](/docs/references/javascript/session) object, as well as helpers for setting the active session.
+The `useSession()` hook provides access to the current user's [`Session`](/docs/references/javascript/session) object, as well as helpers for setting the active session.
 
 ## Usage
 
