--- a/docs/testing/overview.mdx
+++ b/docs/testing/overview.mdx
@@ -5,7 +5,7 @@ description: Learn about testing with Clerk.
 
 # Testing
 
-Testing is an important part of every application. Clerk has built some helpers to make testing your application with Clerk easier, with more on the way. End-to-end (E2E) tests should be possible in any framework, however each framework may require a slightly different setup. If you're having trouble getting testing to work properly, [send us a message](https://clerk.com/support) and we'll be able to help.
+Testing is an important part of every application. Clerk has built some helpers to make testing your application with Clerk easier, with more on the way. End-to-end (E2E) tests should be possible in any framework. However, each framework may require a slightly different setup. If you're having trouble getting testing to work properly, [send us a message](https://clerk.com/support) and we'll be able to help.
 
 <Callout type="warning">
   Clerk's APIs do have Rate limits per IP address, you should write your e2e tests in a way that does not sign in on each test, and instead, you should sign in once for all, or most, of your tests
