clean up /javascript/user

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -11,23 +11,18 @@ description: These are the methods that help you create data for the user, such 
 function createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddress>;
 ```
 
-Adds an email address for the user. A new <a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> will be created and associated with the user.
+Adds an email address for the user. A new [`EmailAddress`](/docs/references/javascript/email-address/email-address) will be created and associated with the user.
 
 ### `CreateEmailAddressParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>email</code>, <code>string</code>, <>The value of the email address, the actual email box address.</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `email` | `string` | The value of the email address |
 
 ### Returns
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/email-address/email-address">EmailAddress</a>{">"}</code>, <>The email address created for the user.</>]}
  ]}
@@ -44,19 +39,14 @@ Adds a phone number for the user. A new <a href="/docs/references/javascript/pho
 
 ### `CreatePhoneNumberParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>phoneNumber</code>, <code>string</code>, <>The value of the phone number, in <a href="https://en.wikipedia.org/wiki/E.164" target="_blank" rel="noopener">E.164</a> format.</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `phoneNumber` | `string` | The value of the phone number, in [E.164](https://en.wikipedia.org/wiki/E.164) format. |
 
 ### Returns
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a>{">"}</code>, <>The phone number created for the user.</>]}
  ]}
@@ -72,19 +62,14 @@ Adds a web3 wallet for the user. A new <a href="/docs/references/javascript/web3
 
 ### `CreateWeb3WalletParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x + 40 hexadecimal characters</code>. </>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `web3Wallet` | `string` | In [Ethereum](https://docs.metamask.io/guide/common-terms.html#address-public-key), the address is made up of `0x + 40` hexadecimal characters |
 
 ### Returns
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a>{">"}</code>, <>The web3 wallet created for the user.</>]}
  ]}
@@ -100,23 +85,17 @@ Adds an external account for the user. A new <a href="/docs/references/javascrip
 
 ### `CreateExternalAccountParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>strategy</code>, <code>string</code>, <>The strategy corresponding to the oauth provider, e.g. <code>oauth_facebook</code>, <code>oauth_github</code>, etc</>]},
-{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully.</>]},
-{cells: [<code>additionalScopes</code>, <code>string[]</code>, <>Any additional scopes you would like your user to be prompted to approve.</>]}
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | [`OAuthStrategy`](/docs/references/javascript/types/oauth-strategy) | The strategy corresponding to the oauth provider, e.g. `oauth_facebook`, `oauth_github`, etc |
+| `redirectUrl` | `string` | The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully. |
+| `additionalScopes` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
 
 ### Returns
 
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/external-account">ExternalAccount</a>{">"}</code>, <>The external account created for the user.</>]}
  ]}
