--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -16,15 +16,11 @@ Updates the user's password.
 ### `UpdateUserPasswordParams`
 
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>newPassword</code>, <code>string</code>, <>The user's new password.</>]},
-{cells: [<code>currentPassword</code>, <code>string</code>, <>The user's current password.</>]},
-{cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If set to <code>true</code>, all sessions will be signed out.</>]}
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `newPassword` | `string` | The user's new password. |
+| `currentPassword` | `string` | The user's current password. |
+| `signOutOfOtherSessions` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
 
 ## `removePassword()`
 
@@ -36,12 +32,6 @@ Removes the user's password.
 
 ### `RemoveUserPasswordParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>currentPassword</code>, <code>string</code>, <>The user's current password.</>]},
- ]}
-  />
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `currentPassword` | `string` | The user's current password. |
