--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -20,7 +20,6 @@ Generates a TOTP secret for a user that can be used to register the application 
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="#totp-resource">TOTPResource</a>{">"}</code>, <>The newly created TOTP object.</>]}
  ]}
@@ -37,19 +36,14 @@ Verifies a TOTP secret after a user has created it. The user must provide a code
 
 #### `VerifyTOTPParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>code</code>, <code>string</code>, <>A 6 digit TOTP generated from the user's authenticator app.</>]}
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `code` | `string` | A 6 digit TOTP generated from the user's authenticator app. |
 
 #### Returns
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="#totp-resource">TOTPResource</a>{">"}</code>, <>The newly verified TOTP object.</>]}
  ]}
@@ -68,7 +62,6 @@ Disables TOTP by deleting the user's TOTP secret.
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/types/deleted-object">DeletedObject</a>{">"}</code>, <>The a reference to the deleted TOTP object.</>]}
  ]}
@@ -87,7 +80,6 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="#backup-code-resource">BackupCodeResource</a>{">"}</code>, <>The newly created backup code.</>]}
  ]}
@@ -97,30 +89,21 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 
 ### `TOTPResource`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this TOTP secret</>]},
-{cells: [<code>secret</code>, <code>string</code>, <>The generated TOTP secret. Note: this is only returned to the client upon creation and cannot be retrieved afterwards.</>]},
-{cells: [<code>uri</code>, <code>string</code>, <>A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards.</>]},
-{cells: [<code>verified</code>, <code>boolean</code>, <>Whether this TOTP secret has been verified by the user by providing one code generated with it. TOTP is not enabled on the user unless they have a verified secret.</>]},
-{cells: [<code>backupCodes</code>, <code>string[]</code>, <>A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated.</>]},
-{cells: [<code>createdAt</code>, <code>Date</code>, <>Creation date of the TOTP secret</>]},
-{cells: [<code>updatedAt</code>, <code>Date</code>, <>Update timestamp of the TOTP secret</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this TOTP secret |
+| `secret` | `string` | The generated TOTP secret. Note: this is only returned to the client upon creation and cannot be retrieved afterwards. |
+| `uri` | `string` | A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards. |
+| `verified` | `boolean` | Whether this TOTP secret has been verified by the user by providing one code generated with it. TOTP is not enabled on the user unless they have a verified secret. |
+| `backupCodes` | `string[]` | A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated. |
+| `createdAt` | `Date` | Creation date of the TOTP secret |
+| `updatedAt` | `Date` | Update timestamp of the TOTP secret |
 
 ### `BackupCodeResource`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this TOTP secret</>]},
-{cells: [<code>codes</code>, <code>string[]</code>, <>The generated set of backup codes.</>]},
-{cells: [<code>createdAt</code>, <code>Date</code>, <>Creation date of the TOTP secret</>]},
-{cells: [<code>updatedAt</code>, <code>Date</code>, <>Update timestamp of the TOTP secret</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this TOTP secret |
+| `codes` | `string[]` | The generated set of backup codes |
+| `createdAt` | `Date` | Creation date of the TOTP secret |
+| `updatedAt` | `Date` | Update timestamp of the TOTP secret |
