--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -24,22 +24,22 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `username` | `string \| null` | The user's username. |
 | `imageUrl` | `string` | Holds the users profile image or avatar. |
 | `profileImageUrl` | `string \| null` | The URL for the user's profile image.<br />**This property is deprecated** in favor of `image_url` |
-| `primaryEmailAddress` | [`EmailAddress`](/docs/references/javascript/email-address/email-address) \| `null` | Information about the user's primary email address. |
+| `primaryEmailAddress` | [`EmailAddress`][email-ref] \| `null` | Information about the user's primary email address. |
 | `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
-| `emailAddresses` | <code><a href="/docs/references/javascript/email-address/email-address">EmailAddress[]</a></code> | An array of all the `EmailAddress` objects associated with the user. Includes the primary. |
+| `emailAddresses` | [`EmailAddress[]`][email-ref] | An array of all the `EmailAddress` objects associated with the user. Includes the primary. |
 | `hasVerifiedEmailAddress` | `boolean` | A getter boolean to check if the user has verified an email address. |
-| `primaryPhoneNumber` | [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) \| `null` | Information about the user's primary phone number. |
+| `primaryPhoneNumber` | [`PhoneNumber`][phone-ref] \| `null` | Information about the user's primary phone number. |
 | `primaryPhoneNumberId` | `string \| null` | The unique identifier for the `PhoneNumber` that the user has set as primary. |
-| `phoneNumbers` | <code><a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber[]</a></code> | An array of all the `PhoneNumber` objects associated with the user. Includes the primary. |
+| `phoneNumbers` | [`PhoneNumber[]`][phone-ref] | An array of all the `PhoneNumber` objects associated with the user. Includes the primary. |
 | `hasVerifiedPhoneNumber` | `boolean` | A getter boolean to check if the user has verified a phone number. |
-| `primaryWeb3WalletId` | `string \| null` | The unique identifier for the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) that the user signed up with. |
-| `primaryWeb3Wallet` | [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) \| `null` | The `Web3Wallet` that the user signed up with. |
-| `web3Wallets` | <code><a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet[]</a></code> | An array of all the `Web3Wallet` objects associated with the user. Includes the primary. |
-| `externalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | An array of all the `ExternalAccount` objects associated with the user via OAuth.<br />**Note**: This includes both verified & unverified external accounts. |
-| `verifiedExternalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | A getter for the user's list of verified external accounts. |
-| `unverifiedExternalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | A getter for the user's list of unverified external accounts. |
+| `primaryWeb3WalletId` | `string \| null` | The unique identifier for the [`Web3Wallet`][web3-ref] that the user signed up with. |
+| `primaryWeb3Wallet` | [`Web3Wallet`][web3-ref] \| `null` | The `Web3Wallet` that the user signed up with. |
+| `web3Wallets` | [`Web3Wallet[]`][web3-ref] | An array of all the `Web3Wallet` objects associated with the user. Includes the primary. |
+| `externalAccounts` | [`ExternalAccount[]`][exacc-ref] | An array of all the `ExternalAccount` objects associated with the user via OAuth.<br />**Note**: This includes both verified & unverified external accounts. |
+| `verifiedExternalAccounts` | [`ExternalAccount[]`][exacc-ref] | A getter for the user's list of verified external accounts. |
+| `unverifiedExternalAccounts` | [`ExternalAccount[]`][exacc-ref] | A getter for the user's list of unverified external accounts. |
 | `samlAccounts` | `SamlAccount[]` | An **experimental** list of saml accounts associated with the user. |
-| `organizationMemberships` | <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership[]</a></code> | A list of `OrganizationMembership`s representing the list of organizations the user is member with. |
+| `organizationMemberships` | [`OrganizationMembership[]`](/docs/references/javascript/organization-membership) | A list of `OrganizationMembership`s representing the list of organizations the user is member with. |
 | `passwordEnabled` | `boolean` | A boolean indicating whether the user has a password on their account. |
 | `totpEnabled` | `boolean` | A boolean indicating whether the user has enabled TOTP by generating a TOTP secret and verifying it via an authenticator ap |
 | `twoFactorEnabled` | `boolean` | A boolean indicating whether the user has enabled two-factor authentication. |
@@ -72,9 +72,9 @@ Updates the user's attributes. Use this method to save information you collected
 | `password` | `string` | The user's password.<br />**This property is deprecated.** This will be removed in the next major version. Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#updatepassword) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
-| `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`](/docs/references/javascript/email-address/email-address) that the user has set as primary. |
-| `primaryPhoneNumberId` | `string` | The unique identifier for the [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) that the user has set as primary. |
-| `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) that the user signed up with. |
+| `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
+| `primaryPhoneNumberId` | `string` | The unique identifier for the [`PhoneNumber`][phone-ref] that the user has set as primary. |
+| `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`][web3-ref] that the user signed up with. |
 | `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
 
 ### `delete()`
@@ -103,7 +103,6 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="#imageresource">ImageResource</a>{">"}</code>, <>The uploaded image.</>]}
  ]}
@@ -132,7 +131,6 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
 
 <Tables
   headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
 {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/session-with-activities">SessionWithActivities</a>[]{">"}</code>, <>The list of active user sessions.</>]}
  ]}
@@ -151,7 +149,7 @@ A check whether or not the given resource is the primary identifier for the user
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `ident` | [`EmailAddress`](/docs/references/javascript/email-address/email-address) \| [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) \| [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) | The resource checked against the user to see if it is the primary identifier. |
+| `ident` | [`EmailAddress`][email-ref] \| [`PhoneNumber`][phone-ref] \| [`Web3Wallet`][web3-ref] | The resource checked against the user to see if it is the primary identifier. |
 
 ## Additional methods
 
@@ -175,3 +173,8 @@ In addition to the methods listed above, the `User` class also has the following
 *   [`createPhoneNumber()`](/docs/references/javascript/user/create-metadata#create-phone-number)
 *   [`createWeb3Wallet()`](/docs/references/javascript/user/create-metadata#create-web-3-wallet)
 *   [`createExternalAccount()`](/docs/references/javascript/user/create-metadata#create-external-account)
+
+[web3-ref]: /docs/references/javascript/web3-wallet/web3-wallet
+[exacc-ref]: /docs/references/javascript/external-account
+[email-ref]: /docs/references/javascript/email-address/email-address
+[phone-ref]: /docs/references/javascript/phone-number/phone-number
