--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Handling requests with Node.js and Express
-description: 
+description: Learn how to handle authenticated requests with Node.js and Express middleware using Clerk. 
 ---
 
 # Handling requests with Node.js and Express
