--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -14,6 +14,8 @@ The Clerk Node SDK offers two authentication middlewares specifically for [Expre
 
 ## `ClerkExpressWithAuth()`
 
+`ClerkExpressWithAuth` is a lax middleware that returns an empty auth object when an unauthenticated request is made.
+
 <CodeBlockTabs options={['JavaScript', 'TypeScript']}>
   ```js
   import "dotenv/config"; // To read CLERK_API_KEY
