--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -83,6 +83,8 @@ app.listen(port, () => {
 
 ## `ClerkExpressRequireAuth()`
 
+`ClerkExpressRequireAuth` is a strict middleware that raises an error when an unauthenticated request is made.
+
 <CodeBlockTabs options={['JavaScript', 'TypeScript']}>
   ```js
   import "dotenv/config"; // To read CLERK_API_KEY
