--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -163,7 +163,7 @@ Express comes with a default error handler for errors encountered in the middlew
 
 Developers can also implement their own custom error handlers as detailed in the [Express error handling guide](https://expressjs.com/en/guide/error-handling.html). An example error handler can be found above.
 
-If you are using the strict middleware variant, the err pass to your error handler will contain enough context for you to respond as you deem fit.
+If you are using the strict middleware variant, the `err` passed to your error handler will contain enough context for you to respond as you deem fit.
 
 ## Middleware options
 
