Updated to tablemarkdown

--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -167,34 +167,8 @@ If you are using the strict middleware variant, the `err` passed to your error h
 
 ## Middleware options
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>authorizedParties</code>, 
-        <code>*string[]*</code>, 
-        <code>Validate that the azp claim in the Clerk Session JWT equals any of your known Origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do.
-        For more information refer to Manual JWT Verification.</code>
-      ],
-    },
-    {
-      cells: [
-        <code>jwtKey</code>,
-        <code>*string*</code>,
-        <code>Clerk's JWT session token can be verified in a networkless manner using the JWT verification key.
-        By default, Clerk will use our well-known JWKs endpoint to fetch and cache the key for any subsequent token verification. If you use the CLERK_JWT_KEY environment variable or the jwtKey option to supply the key, Clerk will pick it up and do networkless verification for session tokens using it.
-        For more information refer to Networkless Token Verification.
-        </code>
-      ],
-    },
-    {
-      cells: [
-        <code>onError</code>,
-        <code>*(error: ClerkAPIResponseError) => unknown*</code>,
-        <code>This function can act as a custom error handler tailored to the needs of your application.</code>
-      ],
-    },
-  ]}
-/>
+| Name        | Type        | Description    |
+| ----------- | ----------- | -------------- |
+| `authorizedParties`| `string[]` | `Validate that the azp claim in the Clerk Session JWT equals any of your known Origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do. For more information refer to `[Manual JWT Verification](https://clerk.com/docs/backend-requests/handling/manual-jwt). |
+| `jwtKey`  | `string` | `Clerk's JWT session token can be verified in a networkless manner using the JWT verification key. By default, Clerk will use our well-known JWKs endpoint to fetch and cache the key for any subsequent token verification. If you use the CLERK_JWT_KEY environment variable or the jwtKey option to supply the key, Clerk will pick it up and do networkless verification for session tokens using it. For more information refer to `[Networkless Token Verification](https://clerk.com/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
+| `onError` | `(error: ClerkAPIResponseError) => unknown` | `This function can act as a custom error handler tailored to the needs of your application.`  |
