--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -156,6 +156,13 @@ In some cases you will want to use your own button, or button text. You can do t
         <code>string</code>,
         <>Full URL or path to navigate after successful sign up.</>,
       ],
+    },
+    {
+      cells: [
+        <code>mode</code>,
+        <code>"redirect" | "modal"</code>,
+        <><code>redirect</code> is the default behaviour and will redirect to sign-in route. <code>modal</code> will open a modal one current route.</>
+      ]
     }
   ]}
 />
