--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -101,9 +101,10 @@ All props below are optional.
 | --- | --- | --- |
 | `appearance` | `object` | Controls the overall look and feel of the component. See [Appearance](/docs/components/customization/overview) for more information. |
 | `routing` | `string` | The routing strategy for your pages.<br />Supported values are: <ul><li>hash (default): Hash-based routing.</li><li>path: Path-based routing.</li><li>virtual: Virtual-based routing.</li></ul> |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-up. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-up. Note: If you are using Environment Variables for Next.js or Remix to specify your routes, this will be set to `path`.|
 | `redirectUrl` | `string` | Full URL or path to navigate to after successful sign-in or sign-up.<br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | Full URL or path to navigate to after a successful sign-in. |
 | `signInUrl` | `string` | Full URL or path to the sign-in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
 | `afterSignUpUrl` | `string` | Full URL or path to navigate to after a successful sign-up. |
 | `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
+
