clean up /javascript/clerk (#371)

--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -7,13 +7,13 @@ description: The <SignUp /> component renders a UI for signing up users. The fun
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
 
-The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
+The [`<SignUp />`][signup-ref] component renders a UI for signing up users. The functionality of the [`<SignUp />`][signup-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your [`<SignUp />`][signup-ref] component by passing additional properties at the time of rendering.
 
 > All of these are methods on [an instance of the `Clerk` class](/docs/references/javascript/clerk/clerk).
 
 ## `mountSignUp()`
 
-Render the `<SignUp />` component to an HTML `<div>` element.
+Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -72,12 +72,12 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<SignUp />` component |
-| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<SignUp />`][signup-ref] component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the [`<SignUp />`][signup-ref] component |
 
 ## `unmountSignUp()`
 
-Unmount and run cleanup on an existing `<SignUp />` component instance.
+Unmount and run cleanup on an existing [`<SignUp />`][signup-ref] component instance.
 
 ### Usage
 
@@ -136,11 +136,11 @@ function unmountSignUp(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<SignUp />` component instance |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<SignUp />`][signup-ref] component instance |
 
 ## `openSignUp()`
 
-Opens the `<SignUp />` component as an overlay at the root of your HTML `body` element.
+Opens the [`<SignUp />`][signup-ref] component as an overlay at the root of your HTML `body` element.
 
 ### Usage
 
@@ -188,7 +188,7 @@ function openSignUp(props?: SignUpProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the [`<SignUp />`][signup-ref] component |
 
 ## `closeSignUp()`
 
@@ -244,10 +244,13 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `routing?` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
-| `path?` | `string` | The path where the component is mounted on when path-based routing is used e.g. `/sign-in`. |
-| `redirectUrl?` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. `/sign-in`. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
 | `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
 | `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. |
 | `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
+
+[signup-ref]: /docs/components/authentication/sign-up
